CHROMIUM: ar10k: add mangling for ieee80211_update_mu_groups

Otherwise, modpost complains, and we can't load both ar10k and another
Wifi driver (e.g., USB Wifi) at runtime.

BUG=chromium:832891
TEST=USB Wifi on scarlet -- both internal (ath10k_pci) and external
     (e.g., rt2800usb) can load

Change-Id: I224d97bf7656422806a4a4955f57e5b398c0a44a
Signed-off-by: Brian Norris <briannorris@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/1194699
Commit-Ready: ChromeOS CL Exonerator Bot <chromiumos-cl-exonerator@appspot.gserviceaccount.com>
Reviewed-by: Kirtika Ruchandani <kirtika@chromium.org>